added two new files paymentform.php, reports.php modified dashboard.css, dashboard.php, login.css, membershipform.php, signup.css, statements.php. deleted process_membership.php

--- a/dashboard.css
+++ b/dashboard.css
@@ -32,9 +32,13 @@
     display: block;
     padding: 10px;
     text-decoration: none;
-    color: #000;
+    color: #f9f6f6;
 }
 
+.dashboard-header{
+    background-color: #121111; 
+    height: 100vh;
+}
 .dashboard-header a:hover {
-    background-color: #ccc; 
+    background-color: #766565; 
 }
