--- a/signup.css
+++ b/signup.css
@@ -26,11 +26,11 @@
         }
 
         .container input[type="submit"] {
-            background-color: #4CAF50;
-            color: white;
+            background-color: #06fa0e;
+            color: rgb(12, 12, 12);
             cursor: pointer;
         }
 
         .container input[type="submit"]:hover {
-            background-color: #05f911;
+            background-color: #ecf1ed;
         }
